--- a/SFMLSampleGame/SFMLSampleGame.vcxproj
+++ b/SFMLSampleGame/SFMLSampleGame.vcxproj
@@ -176,7 +176,6 @@
     <ClInclude Include="ICallback.h" />
     <ClInclude Include="IGuiElement.h" />
     <ClInclude Include="ILayout.h" />
-    <ClInclude Include="IMatchStateManager.h" />
     <ClInclude Include="IStateManager.h" />
     <ClInclude Include="IStateOperator.h" />
     <ClInclude Include="Menu%28stare%29.h" />
@@ -189,6 +188,7 @@
     <ClInclude Include="PlayStateManager.h" />
     <ClInclude Include="RectangleObject.h" />
     <ClInclude Include="RowMaker.h" />
+    <ClInclude Include="ShuffleManager.h" />
     <ClInclude Include="StateOperator.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
@@ -216,6 +216,7 @@
     <ClCompile Include="RectangleObject.cpp" />
     <ClCompile Include="RowMaker.cpp" />
     <ClCompile Include="SFMLSampleGame.cpp" />
+    <ClCompile Include="ShuffleManager.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -225,6 +226,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
