--- a/SFMLSampleGame/SFMLSampleGame.vcxproj
+++ b/SFMLSampleGame/SFMLSampleGame.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="DeckLayout.h" />
     <ClInclude Include="DeckStateManager.h" />
     <ClInclude Include="EndgameStateManager.h" />
+    <ClInclude Include="EnumBattlefield.h" />
     <ClInclude Include="EnumCardName.h" />
     <ClInclude Include="EnumScreenFields.h" />
     <ClInclude Include="FontProvider.h" />
@@ -246,9 +247,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Utils.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
