--- a/SFMLSampleGame/SFMLSampleGame.vcxproj.filters
+++ b/SFMLSampleGame/SFMLSampleGame.vcxproj.filters
@@ -14,9 +14,6 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Button.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -98,9 +95,6 @@
     <ClInclude Include="Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ICard.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="BaseCard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -126,9 +120,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="IngameStateManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="EndgameStateManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GenerateCards.h">
@@ -167,9 +158,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SFMLSampleGame.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Button.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Game.cpp">
@@ -250,9 +238,6 @@
     <ClCompile Include="IngameStateManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="EndgameStateManager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="GenerateCards.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -271,5 +256,8 @@
     <ClCompile Include="MusicProvider.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram2.cd" />
   </ItemGroup>
 </Project>
